--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.0
   file: ^6.1.4
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
