--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   permission_handler: ^10.2.0
   file: ^6.1.4
   path_provider: ^2.0.11
+  amplify_core: ^0.5.1
+  amplify_auth_cognito: ^0.5.1
+  amplify_analytics_pinpoint: ^0.5.1
+  flutter_login: ^4.1.1
+  amplify_storage_s3: ^0.5.1
+  amplify_flutter: ^0.5.1
 
 dev_dependencies:
   flutter_test:
